[package]
name = "wardrobe-extender"
version = "1.1.2"
edition = "2021"

[dependencies]
unreal_asset = { git = "https://github.com/astrotechies/unrealmodding", rev = "186842c" }
repak = { git = "https://github.com/bananaturtlesandwich/repak", rev = "8798e57", default-features = false, features = ["compression", "oodle"] }
gvas = { git = "https://github.com/localcc/gvas", rev = "b42f6f4" }
thiserror = "1.0"

[profile.release]
strip = true
lto = "thin"
panic = "abort"